# food_scheduler

./: .env  .gitignore  README.md  docker-compose-mysql.yml  docker-compose.yml  note.py  pyproject.toml
.backup/: backup_food_tags.py  optimize_prompts.py  simple_food_tagger.py  tagging_agent.py  tagging_agent_prompt.txt
Agent/: categorizor.ipynb  docker-compose.yml  qdrant_manager.py  scheduler.py
Agent/rag_doc/: read_pdf.py
Agent/rag_doc/guidelines/: agent_guidelines.py
Agent/rag_doc/guidelines/disease/: get_data.py
Agent/rag_doc/nutrition/: agent_nutrition.py
Agent/rag_doc/physiology/: agent_physiology.py
db/: csv_edit.ipynb  data_category_aug.py  database.py  db_manager.py  db_migration.py  food_mixin.py  models.py  sqlalchemy_input2pandas.py  user_mixin.py
db/db_mixin/: food_mixin.py  user_mixin.py
db/model/: food_table.py  user_table.py
db/tables/: food_table.py  user_table.py
logs/: prompt_optimizer_log.txt
model/domain/: food.py  user.py
model/schemas/: user.py
obsidian/: ERD.canvas  GenerationMethod.md  Todo(엿던것).md  Todo.md  일정.md  프로젝트 기술 구조.md
obsidian/.obsidian/: app.json  workspace.json
obsidian/DB설계/: ERD.canvas
obsidian/DB설계/Tables/: Food.md  Food_all.md  MajorCategory.md  MediumCategory.md  Nutrient.md
obsidian/Tables/: All.md  DataSource.md  DataType.md  Food.md  MimorCategory.md  Origin.md
obsidian/구조/: 프로젝트 구조.canvas
qdrant_data/: raft_state.json
router/: app.py
router/user/: user_router.py
sqlalchemy_examples/: 01_basic_connection.py  02_basic_crud.py  03_relationships.py  04_advanced_queries.py  05_migrations_events.py  06_performance_best_practices.py  README.md
static/js/: script.js
templates/: dashboard.html  login.html  register.html
test/: mysql_test.py  requirements.txt
