[project]
name = "food-scheduler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "chromadb>=1.0.5",
    "cryptography>=44.0.2",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.9",
    "google-adk>=0.3.0",
    "google-genai>=1.12.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.31",
    "langgraph-swarm>=0.0.10",
    "mysql-connector-python>=9.3.0",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "pypdf>=5.4.0",
    "sqlalchemy>=2.0.40",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.34.2",
]
